updating to latest aft-core package by way of aft-web-services update and removing annotation which is no longer used for loading plugins by AFT

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aft-testrail",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Automation Framework for Testing (AFT) package TestRail integration",
   "main": "./dist/src/index/js",
   "types": "./dist/src/index.d.ts",
@@ -21,7 +21,7 @@
   "author": "Jason Holt Smith <bicarbon8@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "aft-web-services": "1.0.0",
+    "aft-web-services": "^1.0.1",
     "es6-promise": "^4.2.8"
   },
   "devDependencies": {
