--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "aft-testrail",
-  "version": "1.0.1",
-  "description": "Automation Framework for Testing (AFT) package TestRail integration",
+  "version": "2.0.0",
+  "description": "Automated Functional Testing (AFT) package supporting TestRail integration for test execution control and logging",
   "main": "./dist/src/index/js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
-    "pretest": "tsc --declaration",
-    "posttest": "",
-    "build": "tsc --declaration",
-    "test": "jasmine JASMINE_CONFIG_PATH=./jasmine.json"
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc --declaration",
+    "pretest": "npm run build",
+    "test": "./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=./jasmine.json",
+    "coverage": "nyc npm run test"
   },
   "keywords": [
     "aft",
@@ -21,13 +22,15 @@
   "author": "Jason Holt Smith <bicarbon8@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "aft-web-services": "^1.0.1",
+    "aft-web-services": "^2.0.0",
     "es6-promise": "^4.2.8"
   },
   "devDependencies": {
-    "@types/node": "^12.7.12",
-    "@types/jasmine": "^3.4.4",
-    "jasmine": "^3.5.0",
-    "typescript": "^3.6.4"
+    "@types/jasmine": "^3.6.3",
+    "@types/node": "^12.19.15",
+    "jasmine": "^3.6.4",
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.7"
   }
 }
